Added more POST and DEL route
